# astra_backend

./: .gitignore  backend_flows_test.py  main.py  pyproject.toml  requirements.txt
backend/: notion.py
backend/Route/: chat.py  files.py
backend/services/: ask.py  ask_image.py  gemini_api.py  gemini_embedding.py  image.py  logger.py  notion_service.py  pdf_service.py  semantic_search.py
knowledge/insurance/: 028471fe_f108_431f_9510_66264cf03ede.md  0314f895_f15b_459e_982c_a000055dbe1a.md  045344b7_0ed6_4d02_ba34_57109db01a09.md  07b0d0ce_45ea_4956_a156_c43dace3f3af.md  0d3ab027_312c_417a_b09f_8844165b1c73.md  15e6e39f_2e66_4c88_b9cf_ea3dca662a35.md  20b4a062_1e3c_441d_9145_f1d0da12d3e5.md  28908acd_0e7b_49cb_9cc8_aeabc2272d80.md  2d6b0757_1814_4a88_8677_5ff530be8e8a.md  3042526c_eb33_4c96_921d_04e3f0c5c5ed.md  34922694_1d78_48fc_879c_3d1fdbde1ad8.md  36b0db04_8485_477d_9ff2_c6ea863613af.md  3ad484e0_4946_4544_a3ac_b8a9997bce9c.md  41137190_30ce_4739_a7c4_9e0eb5633e0a.md  4a09b2e0_d158_4ee5_a233_d735c860aff7.md  4d95c63a_fbcc_476a_b02b_db89e7b9616e.md  4dbafa85_b532_45ee_ae4d_61fe04d214df.md  5379f2da_c1e9_41d6_b0ce_78846bfeb923.md  57e72b9d_a288_4228_b196_edded716ddf2.md  5fdf7387_08eb_40f4_b9c3_88cfcebff1f3.md  614faffa_9f92_494b_9e08_e1f8164c6a15.md  668570ad_2038_43f2_8e2a_6906e2a6d7f0.md  6d77bf5e_5e9f_4447_8f95_9b365ad22e3c.md  743233f9_9b32_4ad4_9398_3985c418184c.md  80296823_0b40_4e27_b1b7_a9c027ec9a30.md  8042c66c_9983_4746_9ac5_0ddd50267987.md  87f4728a_6e2a_463c_8991_e054453f8a4a.md  (+20 more)
server/: root.py
vector_store/: index.faiss  metadata.json
(+25 files in other folders)
